--- a/src/style.css
+++ b/src/style.css
@@ -22,3 +22,15 @@ body,
 .crshovered{
     cursor: pointer;
 }
+
+html,
+body,
+#root
+{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: black;
+}
