--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap');
 html,
 body,
 #root
@@ -8,6 +9,9 @@ body,
     width: 100%;
     height: 100%;
     background: ivory;
+}
+*{
+    font-family: "Afacad Flux", sans-serif;
 }
 
 .big-div{
@@ -34,3 +38,34 @@ body,
     height: 100%;
     background: black;
 }
+.parent-div{
+    background-color: black;
+    height: 200px;
+    border-radius: 20px;
+    border: 2px solid black;
+    width: 200px;
+    opacity: 0.95;
+    display: flex;
+    justify-content: center;
+    opacity: 0;
+    transform: scale(0.8); 
+    transition: opacity 0.3s ease, transform 0.3s ease;
+    align-items: center;
+    color: white;
+    padding: 20px;
+}
+.parent-div.visible {
+    opacity: 0.95; 
+    transform: scale(1);
+}
+.close-button {
+    background: transparent;
+    border: none;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    position: absolute; 
+    top: 10px; 
+    right: 10px; 
+    padding: 5px;
+  }
