--- a/src/style.css
+++ b/src/style.css
@@ -58,14 +58,29 @@ body,
     opacity: 0.95; 
     transform: scale(1);
 }
+
+.hello-there{
+    position: absolute;
+    background-color: black;
+    height: 600px;
+    width: 500px;
+    padding: 20px;
+    color: white;
+    border-radius: 30px;
+    top: 50%;
+    opacity: 0.95;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.header-div{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 .close-button {
     background: transparent;
     border: none;
     color: white;
-    font-size: 16px;
+    font-size: 26px;
     cursor: pointer;
-    position: absolute; 
-    top: 10px; 
-    right: 10px; 
-    padding: 5px;
   }
