--- a/src/style.css
+++ b/src/style.css
@@ -60,10 +60,11 @@ body,
 }
 
 .pop-up{
+    border-radius: 20px;
     position: absolute;
     background-color: black;
     height: 500px;
-    width: 600px;
+    width: 650px;
     color: white;
     top: 50%;
     left: 50%;
@@ -79,7 +80,7 @@ body,
     top: -0.5px;
     z-index: -1;
     clip-path: polygon(0 0, 40% 0, 53% 100%, 0% 100%);
-
+    border-radius:20px;
 
 }
 .header-div{
@@ -94,6 +95,7 @@ body,
     font-size: 26px;
     cursor: pointer;
     align-self: flex-end;
+    margin: 10px 10px 0px 0px;
   }
   .image-container{
     width: 40%;
@@ -104,6 +106,34 @@ body,
   }
   .image-container img{
     width: 200px;
+    margin-left: 30px;
     height: 200px;
     object-fit: contain;
+  }
+  .main-content-div{
+    width: 100%;
+    height: 100%;
+    display: flex;
+  }
+  .text-container{
+    margin-left: 80px;
+    width: 50%;
+    color: #1A1A1A;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+
+  }
+
+  .ecosystem-div{
+    display: flex;
+    justify-content: space-around;
+
+  }
+  .ecosystem-header{
+    margin-top: 20px;
+  }
+  .ecosystem-div img{
+    width: 50px;
+    height: auto;
   }
