--- a/src/style.css
+++ b/src/style.css
@@ -194,3 +194,55 @@ body,
     height: 40px;
     object-fit: contain;
   }
+
+.me-pop-up{
+    overflow: auto;
+    padding: 20px;
+    position: absolute;
+    background-color: white;
+    height: auto;
+    height: 80vh;
+    width: 40%;
+    color: #1A1A1A;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    border-radius: 20px;
+    flex-direction: column;
+}
+.me-pop-up h2{
+  text-align: center;
+  font-size: 60px;
+  margin: 0;
+}
+.gradient-header{
+  background-image: linear-gradient(#02AAB0,#00CDAC);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;  
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  height: 100px;
+  border-radius: 20px 20px 0px 0px;
+}
+.gradient-header img{
+  border-radius: 100%;
+  height: 120px;
+  object-fit: cover;
+  margin-bottom: -60px;
+  width: 120px;
+}
+.about-me-wrapper{
+  height: 100%;
+}
+.about-me-content{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+  align-items: center;
+}
